--- a/opdracht/website/index.html
+++ b/opdracht/website/index.html
@@ -13,16 +13,16 @@
     <main>
         <h1 id="titel">Top 3 best films ooit</h1>
         <div class="poster" id="poster1">
-            <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">
+            <h1>No time to die</h1>
+            <img src="james-bond-no-time-to-die-i86328.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
         <div class="poster" id="poster2">
-            <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">  
+            <h1>Far from home</h1>
+            <img src="Spider-Man_Far_From_Home_poster.jpg" alt="" class="posterimg" id="posterimg1">  
         </div>
         <div class="poster" id="poster3">
-            <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">
+            <h1>Tenet</h1>
+            <img src="tenet.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
     </main>
     <footer>
