--- a/opdracht/website/index.html
+++ b/opdracht/website/index.html
@@ -14,7 +14,7 @@
         <h1 id="titel">Top 3 best films ooit</h1>
         <div class="poster" id="poster1">
             <h1>No time to die</h1>
-            <img src="JB.jpg" alt="" class="posterimg" id="posterimg1">
+            <img src="voorbeeld.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
         <div class="poster" id="poster2">
             <h1>Far from home</h1>
